[package]
name = "influent"
version = "0.4.1"
authors = ["gobwas <gobwas@gmail.com>"]

description = "InfluxDB Rust driver"
documentation = "http://gobwas.github.io/influent.rs/influent/index.html"
repository = "https://github.com/gobwas/influent.rs"
readme = "README.md"
keywords = ["influx", "influxdb"]
license = "MIT"

[features]
default = ["http"]
http = ["reqwest"]

[dependencies]
reqwest = { version = "0.8.6", optional = true }

